# FulgurNET

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FulgurNET.slnx  LICENSE  README.md  bench-results.md
.github/workflows/: build.yml
FulgurNET/: ByteBuffer.cs  ByteBufferExtensions.cs  FulgurException.cs  FulgurNET.csproj  FulgurOptions.cs  FulgurPdf.cs  LICENSE  NativeLibraryLoader.cs  NativeMethods.g.cs  README.md
FulgurNET.Benchmarks/: DinkToPdfBench.cs  FulgurBench.cs  FulgurNET.Benchmarks.csproj  NuGet.config  Program.cs  PuppeteerBench.cs  stage-libwkhtmltox.ps1
FulgurNET.Benchmarks/Common/: FulgurCompetitionReporter.cs  HtmlFixtures.cs
FulgurNET.Tests/: FulgurNET.Tests.csproj  FulgurPdfTests.cs
FulgurNET/examples/HelloFulgur/: HelloFulgur.csproj  Program.cs
FulgurNET/runtimes/win-arm64/native/: .gitkeep
FulgurNET/runtimes/win-x64/native/: .gitkeep
examples/HelloFulgur/: HelloFulgur.csproj  Program.cs
fulgur-native/: Cargo.toml  build.rs
fulgur-native/src/: buffer.rs  lib.rs
